# jules

./: .env.example  .gitignore  README.md  dagster.yaml  pyproject.toml  requirements.txt  tables.yaml
src/: _init_py  definitions.py
src/assets/: sync.py
src/resources/: __init__.py  oci.py  oracle.py
src/utils/: config.py  state_manager.py
